--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,12 @@
 			<artifactId>spring-boot-autoconfigure</artifactId>
 			<version>2.1.5.RELEASE</version>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.6</version>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
